--- a/public/options.html
+++ b/public/options.html
@@ -50,7 +50,7 @@
             best to give you the most accurate and appropriate model, it may not do so always. </p>
         <h2 class="options-heading">Privacy Policy</h2>
         <p class="options-paragraph">Our privacy policy can be found <a
-                href="https://www.example.com/privacy-policy">here</a>.</p>
+                href="">here</a>.</p>
     </div>
     <script src="optionscript.js"></script>
 </body>
